--- a/MyCoreApp/MyCoreApp/Pages/Index.cshtml
+++ b/MyCoreApp/MyCoreApp/Pages/Index.cshtml
@@ -5,6 +5,6 @@ ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hello Abdoullahi</h1>
+    <h1 class="display-4">Greetings, Abdoullahi!</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
